# utilityKnife

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  config.sh
include/: utl_Application.hpp  utl_Box.hpp  utl_Entity.hpp  utl_GameWorld.hpp  utl_PhysicsEntity.hpp  utl_SDLInterface.hpp  utl_ScoreBoard.hpp  utl_Stage.hpp  utl_StageManager.hpp  utl_TextObject.hpp  utl_ValtrAlgorithm.hpp  utl_Vec2d.hpp  utl_VecGraphPhysComp.hpp  utl_VecGraphPhysEnt.hpp  utl_VectorDraw.hpp  utl_random.hpp  utl_utility.hpp
src/: Application.hpp  Box.hpp  CMakeLists.txt  Entity.hpp  GameWorld.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PhysicsEntity.cpp  PhysicsEntity.hpp  SDL_Interface.cpp  SDL_Interface.hpp  Stage.hpp  StageManager.cpp  StageManager.hpp  TextObject.cpp  TextObject.hpp  ValtrAlgorithm.cpp  ValtrAlgorithm.hpp  Vec2d.cpp  Vec2d.hpp  VectorDraw.cpp  VectorDraw.hpp  utility.cpp  utility.hpp  utl_Application.cpp  utl_PhysicsComponent.cpp  utl_PhysicsEntity.cpp  utl_SDLInterface.cpp  utl_ScoreBoard.cpp  utl_StageManager.cpp  utl_TextObject.cpp  utl_ValtrAlgorithm.cpp  utl_Vec2d.cpp  utl_VecGraphPhysEnt.cpp  utl_VecGraphyPhysComp.cpp  utl_VectorDraw.cpp  utl_random.cpp  utl_utility.cpp
